player responsiveness issue resoloved, started workiing on mobile-playbar

--- a/css/global.scss
+++ b/css/global.scss
@@ -97,8 +97,8 @@ nav {
 }
 
 footer {
-  left: 0;
-  bottom: 0;
+  left: 0px;
+  bottom: 0px;
   width: 100%;
   height: 100px;
   position: fixed;
@@ -119,85 +119,6 @@ footer {
   i {
     font-size: 1.4rem;
   }
-
-  .album-name {
-    font-size: 12px;
-    color: gray;
-  }
-
-  .track-time {
-    font-size: 11px;
-    color: gray;
-    width: 100px;
-  }
-
-  .track-list,
-  .album-track {
-    font-size: 0.8rem;
-    color: #fff;
-  }
-
-  .fa-heart,
-  .fa-ellipsis-h {
-    color: #fff;
-  }
-
-  .btn-success {
-    background-color: #1db954;
-  }
-
-  .icon-box {
-    width: 10px;
-    color: #fff;
-  }
-
-  .album-track {
-    width: auto;
-  }
-
-  table {
-    border-spacing: 10px;
-    border-collapse: separate;
-    margin: auto;
-  }
-
-  @media only screen and (max-width: 991px) {
-    .ablum-cover-section {
-      margin: auto;
-    }
-  }
-
-  .player-buttons-play,
-  .player-buttons-volume {
-    font-size: 32px;
-  }
-
-  .slider {
-    -webkit-appearance: none;
-    width: 20%;
-    height: 25px;
-    background: #d3d3d3;
-    height: 5px;
-    outline: none;
-    border-radius: 5px;
-    opacity: 0.7;
-    -webkit-transition: 0.2s;
-    transition: opacity 0.2s;
-  }
-
-  .slider::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    appearance: none;
-    width: 15px;
-    height: 15px;
-    border-radius: 50%;
-    background: rgb(68, 68, 68);
-    cursor: pointer;
-  }
-
-  #myRange-musicPlay {
-    width: 400px;
-  }
 }
 
 // Global media queiries
@@ -210,7 +131,88 @@ footer {
 }
 
 @media screen and (min-width: 768px) {
-  #mobile-footer-container {
+  #mobile-footer-container,
+  #mobile-navbar {
     display: none;
   }
+}
+
+// EKOW GLOBAL PLAYER CODE
+.album-name {
+  font-size: 12px;
+  color: gray;
+}
+
+.track-time {
+  font-size: 11px;
+  color: gray;
+  width: 100px;
+}
+
+.track-list,
+.album-track {
+  font-size: 0.8rem;
+  color: #fff;
+}
+
+.fa-heart,
+.fa-ellipsis-h {
+  color: #fff;
+}
+
+.btn-success {
+  background-color: #1db954;
+}
+
+.icon-box {
+  width: 10px;
+  color: #fff;
+}
+
+.album-track {
+  width: auto;
+}
+
+table {
+  border-spacing: 10px;
+  border-collapse: separate;
+  margin: auto;
+}
+
+@media only screen and (max-width: 991px) {
+  .ablum-cover-section {
+    margin: auto;
+  }
+}
+
+.player-buttons-play,
+.player-buttons-volume {
+  font-size: 32px;
+}
+
+.slider {
+  -webkit-appearance: none;
+  width: 20%;
+  height: 25px;
+  background: #d3d3d3;
+  height: 5px;
+  outline: none;
+  border-radius: 5px;
+  opacity: 0.7;
+  -webkit-transition: 0.2s;
+  transition: opacity 0.2s;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  background: rgb(68, 68, 68);
+  cursor: pointer;
+}
+
+#myRange-musicPlay {
+  width: 400px;
 }
